HMAN-846 Sonar issues